# filo

./: .gitignore  CMakeLists.txt  PRD.md  README.md
.github/workflows/: release.yml
cmake/: GenerateVersion.cmake  make_icns.sh
src/: Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
src/audio/: AudioEngine.cpp  AudioEngine.h
src/plugins/: PluginManager.cpp  PluginManager.h  PluginScannerSubprocess.cpp  PluginScannerSubprocess.h
src/ui/: DeviceSelectorBar.cpp  DeviceSelectorBar.h  FiloLookAndFeel.cpp  FiloLookAndFeel.h  IconButton.cpp  IconButton.h  IconPaths.cpp  IconPaths.h  LevelMeter.cpp  LevelMeter.h  LogoView.cpp  LogoView.h  PluginChainView.cpp  PluginChainView.h  PluginPicker.cpp  PluginPicker.h  ScanOverlay.cpp  ScanOverlay.h  Theme.h
